--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -3,5 +3,22 @@ $primary: purple;
 @import 'bootstrap/scss/bootstrap';
 
 .box {
-  background-color: blue;
+  background-color: $primary;
+  border: 1px solid blue;
+  min-height: 50px;
+  font-size: 2rem;
+}
+
+.bd-placeholder-img {
+  font-size: 1.125rem;
+  text-anchor: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+}
+
+@media (min-width: 768px) {
+  .bd-placeholder-img-lg {
+    font-size: 3.5rem;
+  }
 }
